Validate Token method added